# otp_generator

./: pyproject.toml  setup.py
otp_generator/cli/: commands.py  entrypoint.py
otp_generator/config/: settings.py
otp_generator/two_factor/: generate_otp.py
