[tool.poetry]
name = "otp-generator"
version = "0.1.0"
description = "A CLI to easily generate OTPs"
authors = ["Caio Marx Martins <icaiomarxm@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyotp = "^2.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
