[tool.poetry]
name = "otp-generator"
version = "0.1.0"
description = "A CLI to easily generate OTPs"
authors = ["Caio Marx Martins <icaiomarxm@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyotp = "^2.9.0"
click = "^8.1.7"
pydantic-settings = "^2.2.1"
sqlmodel = "^0.0.18"
setuptools = "^70.0.0"

[tool.poetry.scripts]
otp = "otp_generator.cli.entrypoint:otp"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
